--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import Layout from '@layouts/Layout.astro';
 import Player from '@components/Player'
 import Songselector from '@components/Songselector'
 ---
-
 <Layout title="Welcome to Astro.">
-	<main>
+	<main class="grid grid-cols-1 items-center content-center bg-teal-100 h-screen">
+		<p class="text-center text-4xl m-5">Yet another Spotify clone just for learning purposes (WIP)</p>
 		<Songselector client:load/>
 		<Player client:load/>	
 	</main>
