--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
-interface Props {
-	title: string;
-}
-
+// Supports weights 300-800
+import '@fontsource-variable/open-sans';
 const { title } = Astro.props;
+import Menu from "@components/Menu/Menu.astro";
+import Player from '@components/Player';
+import { ViewTransitions } from "astro:transitions"
 ---
 
 <!doctype html>
@@ -15,8 +16,24 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions fallback="none" />
 	</head>
-	<body>
-		<slot />
+	<body class="bg-neutral-900 text-white h-screen">
+		<div class="grid grid-cols-[350px_1fr] grid-rows-[1fr_80px] gap-3 h-full p-3">
+			<aside class="bg-neutral-800 rounded-xl">
+				<Menu/>
+			</aside>
+			<main class="bg-neutral-800 rounded-xl">
+				<slot/>	
+			</main>
+			<footer class="flex col-span-2 bg-neutral-800 rounded-xl" transition:persist>
+				<Player client:load/>
+			</footer>
+		</div>
 	</body>
 </html>
+<style>
+	body {
+		font-family: 'Open Sans Variable', sans-serif;
+	}
+</style>
