--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 // Supports weights 300-800
-import '@fontsource-variable/open-sans';
-const { title } = Astro.props;
-import Menu from "@components/Menu/Menu.astro";
-import Player from '@components/Player';
+import '@fontsource-variable/open-sans'
+const { title } = Astro.props
+import Menu from "@components/Menu/Menu.astro"
+import Player from '@components/Player'
 import { ViewTransitions } from "astro:transitions"
 ---
 
